--- a/sniffer-m3u8.2
+++ b/sniffer-m3u8.2
@@ -30,7 +30,7 @@
     );
   }
 
-  // ---------- HOOK FETCH ----------
+  // ---------- HOOK FETCH & XHR (Tidak berubah) ----------
   const origFetch = window.fetch;
   window.fetch = async (...args) => {
     const res = await origFetch(...args);
@@ -40,7 +40,6 @@
     return res;
   };
 
-  // ---------- HOOK XHR ----------
   const origOpen = XMLHttpRequest.prototype.open;
   XMLHttpRequest.prototype.open = function (method, url, ...rest) {
     if (url && url.toString().includes(".m3u8")) {
@@ -49,13 +48,12 @@
     return origOpen.call(this, method, url, ...rest);
   };
 
-  // ---------- EXPORT ALL ----------
+  // ---------- EXPORT & UTILITIES (Tidak berubah) ----------
   window.exportM3U8JSON = function (clearAfterExport = false) {
     if (!window.m3u8Store.length) {
       toastInfo("Belum ada data di m3u8Store");
       return;
     }
-
     let filename = prompt("Masukkan nama file JSON:", "m3u8-data.json");
     if (!filename) return;
     if (!filename.endsWith(".json")) filename += ".json";
@@ -76,20 +74,71 @@
       toastInfo("📦 Store telah dibersihkan.");
     }
   };
+  
+  window.deduplicateM3U8 = function () {
+    const originalCount = window.m3u8Store.length;
+    const unique = [];
+    const seen = new Set();
+    for (const rec of window.m3u8Store) {
+      if (!seen.has(rec.url)) {
+        seen.add(rec.url);
+        unique.push(rec);
+      }
+    }
+    const removedCount = originalCount - unique.length;
+    window.m3u8Store = unique;
+    toastSuccess(`✅ ${removedCount} duplikat dibersihkan. Sisa data: ${unique.length}`);
+  };
 
-  // ---------- TOAST UI ----------
+  // ---------- FITUR BARU: FUNGSI CEK EPISODE HILANG ----------
+  window.checkMissingEpisodes = function() {
+    if (!window.m3u8Store.length) {
+        alert("Belum ada data episode yang tertangkap untuk dicek.");
+        return;
+    }
+
+    const totalEpisodesStr = prompt("Masukkan total episode yang ada di halaman ini:", "70");
+    if (!totalEpisodesStr) return; // User menekan cancel
+
+    const totalEpisodes = parseInt(totalEpisodesStr, 10);
+    if (isNaN(totalEpisodes) || totalEpisodes <= 0) {
+        alert("Input tidak valid. Harap masukkan angka yang benar.");
+        return;
+    }
+
+    // Ambil semua nomor episode yang sudah tertangkap
+    const capturedEpisodes = new Set(
+        window.m3u8Store
+            .map(record => record.episodeNumber)
+            .filter(num => num !== null) // Abaikan jika ada yang gagal parse
+    );
+    
+    // Cari episode yang hilang
+    const missingEpisodes = [];
+    for (let i = 1; i <= totalEpisodes; i++) {
+        if (!capturedEpisodes.has(i)) {
+            missingEpisodes.push(i);
+        }
+    }
+
+    // Tampilkan hasilnya
+    if (missingEpisodes.length === 0) {
+        alert(`✅ Lengkap!\n\nSemua episode dari 1 sampai ${totalEpisodes} telah tertangkap.`);
+    } else {
+        alert(`❌ Episode yang belum tertangkap (${missingEpisodes.length} episode):\n\n${missingEpisodes.join(", ")}`);
+    }
+  };
+
+  // ---------- TOAST UI (Dengan tombol baru) ----------
   const containerId = "m3u8-toast-container";
-  const MAX_TOASTS = 3; // <<-- BATAS MAKSIMAL NOTIFIKASI TOAST
+  const MAX_TOASTS = 3; 
 
   function ensureToastContainer() {
     let el = document.getElementById(containerId);
     if (!el) {
       el = document.createElement("div");
       el.id = containerId;
-      el.style.cssText = `
-        position:fixed; top:10px; right:10px; z-index:999999;
-        display:flex; flex-direction:column; gap:8px; max-width:300px;
-      `;
+      el.style.cssText = `position:fixed; top:10px; right:10px; z-index:999999; display:flex; flex-direction:column; gap:8px; max-width:300px;`;
       document.body.appendChild(el);
     }
     return el;
@@ -98,46 +147,28 @@
   function makeButton(label, onClick, small = false) {
     const btn = document.createElement("button");
     btn.textContent = label;
-    btn.style.cssText = `
-      background:#444; color:#fff; border:none; padding:${small ? "2px 6px" : "4px 8px"};
-      margin-left:5px; border-radius:4px; cursor:pointer; font-size:${small ? "11px" : "13px"};
-    `;
+    btn.style.cssText = `background:#444; color:#fff; border:none; padding:${small ? "2px 6px" : "4px 8px"}; margin-left:5px; border-radius:4px; cursor:pointer; font-size:${small ? "11px" : "13px"};`;
     btn.onclick = onClick;
     return btn;
   }
   
-  // Notifikasi Episode (auto-hide dan dengan batas)
   function showToast(record) {
     const container = ensureToastContainer();
     const existingToasts = container.querySelectorAll(".m3u8-notification-toast");
-    
-    // Jika sudah mencapai batas, hapus toast yang paling lama
     if (existingToasts.length >= MAX_TOASTS) {
       existingToasts[0].remove();
     }
-
     const toast = document.createElement("div");
-    toast.className = "m3u8-notification-toast"; // Tambahkan class untuk identifikasi
-    toast.style.cssText = `
-      background:#222; color:#fff; padding:10px; border-radius:6px;
-      box-shadow:0 2px 6px rgba(0,0,0,0.3); font-family:sans-serif;
-      animation:fadeIn 0.3s ease;
-    `;
-
+    toast.className = "m3u8-notification-toast";
+    toast.style.cssText = `background:#222; color:#fff; padding:10px; border-radius:6px; box-shadow:0 2px 6px rgba(0,0,0,0.3); font-family:sans-serif; animation:fadeIn 0.3s ease;`;
     const ep = record.episodeNumber ?? record.episodeDisplay ?? "Unknown";
     toast.innerHTML = `<div style="font-weight:bold;margin-bottom:4px">🎬 Episode ${ep}</div>`;
-
     const btnRow = document.createElement("div");
     btnRow.style.marginTop = "6px";
-    btnRow.appendChild(makeButton("Copy URL", () => {
-      navigator.clipboard.writeText(record.url);
-      toastSuccess("URL dicopy");
-    }));
+    btnRow.appendChild(makeButton("Copy URL", () => { navigator.clipboard.writeText(record.url); toastSuccess("URL dicopy"); }));
     btnRow.appendChild(makeButton("Tutup", () => toast.remove(), true));
-
     toast.appendChild(btnRow);
     container.appendChild(toast);
-
     setTimeout(() => {
       toast.style.transition = "opacity 0.5s";
       toast.style.opacity = "0";
@@ -145,38 +176,37 @@
     }, 6000);
   }
 
-  // Sticky Export Panel (sekarang draggable)
   (function showStickyExport() {
     const container = ensureToastContainer();
     if (document.getElementById("m3u8-sticky-export")) return;
-
     const panel = document.createElement("div");
     panel.id = "m3u8-sticky-export";
-    panel.style.cssText = `
-      background:#2c3e50; color:#fff; padding:10px; border-radius:6px;
-      box-shadow:0 2px 6px rgba(0,0,0,0.4); font-family:sans-serif;
-      /* Dihapus dari container utama agar bisa digeser secara mandiri */
-    `;
-    
+    panel.style.cssText = `background:#2c3e50; color:#fff; padding:10px; border-radius:6px; box-shadow:0 2px 6px rgba(0,0,0,0.4); font-family:sans-serif;`;
     panel.innerHTML = `<div id="m3u8-drag-handle" style="font-weight:bold;margin-bottom:6px; cursor:grab;">📂 Export M3U8</div>`;
     
-    const btnRow = document.createElement("div");
-    btnRow.appendChild(makeButton("Export", () => window.exportM3U8JSON(false)));
-    btnRow.appendChild(makeButton("Export & Clear", () => window.exportM3U8JSON(true)));
-    btnRow.appendChild(makeButton("Deduplicate", () => window.deduplicateM3U8(), true));
-
-    panel.appendChild(btnRow);
-    container.appendChild(panel);
+    // Baris Tombol Utama
+    const mainBtnRow = document.createElement("div");
+    mainBtnRow.appendChild(makeButton("Export", () => window.exportM3U8JSON(false)));
+    mainBtnRow.appendChild(makeButton("Export & Clear", () => window.exportM3U8JSON(true)));
     
+    // Baris Tombol Utilitas (agar lebih rapi)
+    const utilBtnRow = document.createElement("div");
+    utilBtnRow.style.marginTop = '6px';
+    
+    // === Tombol baru ditambahkan di sini ===
+    utilBtnRow.appendChild(makeButton("Cek Episode", () => window.checkMissingEpisodes(), true));
+    utilBtnRow.appendChild(makeButton("Deduplicate", () => window.deduplicateM3U8(), true));
+    // ======================================
+
+    panel.appendChild(mainBtnRow);
+    panel.appendChild(utilBtnRow);
+    container.appendChild(panel);
     makeDraggable(panel, panel.querySelector("#m3u8-drag-handle"));
   })();
   
-  // ---------- FITUR BARU: FUNGSI UNTUK MEMBUAT ELEMEN DRAGGABLE ----------
   function makeDraggable(element, handle) {
     let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-
     handle.onmousedown = dragMouseDown;
-
     function dragMouseDown(e) {
       e.preventDefault();
       pos3 = e.clientX;
@@ -185,27 +215,18 @@
       document.onmousemove = elementDrag;
       handle.style.cursor = "grabbing";
     }
-
     function elementDrag(e) {
       e.preventDefault();
       pos1 = pos3 - e.clientX;
       pos2 = pos4 - e.clientY;
       pos3 = e.clientX;
       pos4 = e.clientY;
-      
-      let newTop = element.offsetTop - pos2;
-      let newLeft = element.offsetLeft - pos1;
-
-      // Batasi agar tidak keluar viewport
-      newTop = Math.max(0, Math.min(newTop, window.innerHeight - element.offsetHeight));
-      newLeft = Math.max(0, Math.min(newLeft, window.innerWidth - element.offsetWidth));
-      
+      let newTop = Math.max(0, Math.min(element.offsetTop - pos2, window.innerHeight - element.offsetHeight));
+      let newLeft = Math.max(0, Math.min(element.offsetLeft - pos1, window.innerWidth - element.offsetWidth));
       element.style.top = newTop + "px";
       element.style.left = newLeft + "px";
-      // Hapus properti right agar tidak konflik
       element.style.right = 'auto'; 
     }
-
     function closeDragElement() {
       document.onmouseup = null;
       document.onmousemove = null;
@@ -231,21 +252,5 @@
     setTimeout(() => el.remove(), 4000);
   }
 
-  // ---------- CLEAN DUPLICATE ----------
-  window.deduplicateM3U8 = function () {
-    const originalCount = window.m3u8Store.length;
-    const unique = [];
-    const seen = new Set();
-    for (const rec of window.m3u8Store) {
-      if (!seen.has(rec.url)) {
-        seen.add(rec.url);
-        unique.push(rec);
-      }
-    }
-    const removedCount = originalCount - unique.length;
-    window.m3u8Store = unique;
-    toastSuccess(`✅ ${removedCount} duplikat dibersihkan. Sisa data: ${unique.length}`);
-  };
-
-  console.log("%c[OK] M3U8 Sniffer aktif (Draggable UI & Toast Limit).", "color: orange;");
+  console.log("%c[OK] M3U8 Sniffer aktif (Draggable, Toast Limit, Episode Checker).", "color: orange;");
 })();
