--- a/sniffer-m3u8.2
+++ b/sniffer-m3u8.2
@@ -1,10 +1,55 @@
 (function () {
   // ---------- INIT ----------
   window.m3u8Store = window.m3u8Store || [];
+  
+  // Variabel untuk menyimpan episode terakhir yang diklik
+  let lastClickedEpisode = null;
+
+  // Fungsi untuk menangkap klik pada elemen episode
+  function setupEpisodeClickTracker() {
+    document.addEventListener('click', function(e) {
+      // Cari elemen yang mungkin mengandung info episode
+      // Sesuaikan selector ini dengan struktur website yang dituju
+      const episodeElement = e.target.closest('[data-episode]') || 
+                            e.target.closest('.episode') ||
+                            e.target.closest('.episode-item') ||
+                            e.target.closest('a[href*="episode"]') ||
+                            e.target.closest('button[data-episode-number]');
+      
+      if (episodeElement) {
+        // Coba ekstrak nomor episode dari berbagai atribut
+        const episodeFromDataAttr = episodeElement.getAttribute('data-episode') || 
+                                   episodeElement.getAttribute('data-episode-number');
+        const episodeFromText = extractEpisodeFromText(episodeElement.textContent);
+        
+        lastClickedEpisode = episodeFromDataAttr || episodeFromText;
+        
+        if (lastClickedEpisode) {
+          console.log(`%c[Episode Click]`, "color: cyan;", `Episode ${lastClickedEpisode} terdeteksi`);
+        }
+      }
+    });
+  }
+
+  function extractEpisodeFromText(text) {
+    // Mencari pola angka dalam teks (bisa berupa "Episode 1", "EP 1", "E01", dll)
+    const patterns = [
+      /episode\s*(\d+)/i,
+      /ep\s*(\d+)/i,
+      /e\s*(\d+)/i,
+      /(\d+)/ // fallback: angka apa saja
+    ];
+    
+    for (const pattern of patterns) {
+      const match = text.match(pattern);
+      if (match) return parseInt(match[1], 10);
+    }
+    return null;
+  }
 
   function extractEpisodeFromURL(url) {
-    const match = url.match(/_(\d{1,3})\//);
-    return match ? parseInt(match[1], 10) : null;
+    // Kini menggunakan data yang diklik, bukan dari URL
+    return lastClickedEpisode;
   }
 
   function saveRecord(url) {
@@ -16,7 +61,8 @@
       url: url,
       episodeDisplay: (document.querySelector(".ml-6")?.innerText || "").trim(),
       episodeNumber: episodeFromURL,
-      timestamp: new Date().toISOString()
+      timestamp: new Date().toISOString(),
+      source: lastClickedEpisode ? 'click' : 'unknown'
     };
     window.m3u8Store.push(record);
 
@@ -26,8 +72,12 @@
       "color: lime; font-weight: bold;",
       "\nEpisode:", record.episodeNumber ?? record.episodeDisplay,
       "\nURL :", record.url,
-      "\nPage :", record.pageURL
+      "\nPage :", record.pageURL,
+      "\nSource :", record.source
     );
+    
+    // Reset setelah digunakan (opsional)
+    // lastClickedEpisode = null;
   }
 
   // ---------- HOOK FETCH ----------
@@ -57,7 +107,7 @@
     }
 
     let filename = prompt("Masukkan nama file JSON:", "m3u8-data.json");
-    if (!filename) return; // User menekan cancel
+    if (!filename) return;
     if (!filename.endsWith(".json")) filename += ".json";
 
     const json = JSON.stringify(window.m3u8Store, null, 2);
@@ -73,22 +123,16 @@
 
   // ---------- FITUR BARU: LIHAT DATA & CLEAR DATA ----------
   
-  /**
-   * Menampilkan data yang tersimpan di console.
-   */
   window.viewM3U8Data = function() {
     if (!window.m3u8Store.length) {
         toastInfo("Belum ada data untuk ditampilkan.");
         return;
     }
     console.log("--- Menampilkan Data M3U8 yang Tertangkap ---");
-    console.table(window.m3u8Store);
+    console.table(window.m3U8Store);
     toastInfo("ℹ️ Data ditampilkan di Console (tekan F12).");
   };
 
-  /**
-   * Menghapus semua data yang tersimpan setelah konfirmasi.
-   */
   window.clearM3U8Data = function() {
     if (!window.m3u8Store.length) {
         toastInfo("Data sudah kosong.");
@@ -100,7 +144,6 @@
         console.log("%c[M3U8] Store telah dibersihkan.", "color: yellow;");
     }
   };
-
 
   // ---------- TOAST UI ----------
   const containerId = "m3u8-toast-container";
@@ -129,7 +172,6 @@
     return btn;
   }
 
-  // Notifikasi Episode (auto-hide)
   function showToast(record) {
     const container = ensureToastContainer();
     const toast = document.createElement("div");
@@ -160,11 +202,11 @@
     }, 6000);
   }
 
-  // Sticky Export All Toast (Dengan tombol baru)
+  // Sticky Export All Toast
   (function showStickyExport() {
     const container = ensureToastContainer();
     let existing = document.getElementById("m3u8-sticky-export");
-    if (existing) return; // hanya sekali
+    if (existing) return;
 
     const toast = document.createElement("div");
     toast.id = "m3u8-sticky-export";
@@ -176,12 +218,8 @@
 
     const btnRow = document.createElement("div");
     btnRow.appendChild(makeButton("Export All", () => window.exportM3U8JSON()));
-
-    // === Tombol baru ditambahkan di sini ===
     btnRow.appendChild(makeButton("Lihat Data", () => window.viewM3U8Data(), true));
     btnRow.appendChild(makeButton("Clear", () => window.clearM3U8Data(), true));
-    // =====================================
-    
     btnRow.appendChild(makeButton("Deduplicate", () => window.deduplicateM3U8(), true));
 
     toast.appendChild(btnRow);
@@ -217,10 +255,13 @@
         unique.push(rec);
       }
     }
-    const removedCount = originalCount - originalCount;
+    const removedCount = originalCount - unique.length;
     window.m3u8Store = unique;
     toastSuccess(`✅ ${removedCount} duplikat dibersihkan. Sisa data: ${unique.length}`);
   };
 
-  console.log("%c[OK] M3U8 Sniffer aktif. Semua URL akan dicatat di window.m3u8Store", "color: orange;");
+  // Setup tracker klik episode saat script dijalankan
+  setupEpisodeClickTracker();
+  
+  console.log("%c[OK] M3U8 Sniffer aktif. Klik pada episode untuk menangkap nomor episode.", "color: orange;");
 })();
